force-app/main/default/objects/Books__c/fields/Binding__c.field-meta.xml
<CustomField>
    <fullName>Binding__c</fullName>
    <label>Binding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>