force-app/main/default/objects/Books__c/fields/Goodreads_Id__c.field-meta.xml
<CustomField>
    <fullName>Goodreads_Id__c</fullName>
    <label>Goodreads Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>