force-app/main/default/objects/Books__c/fields/ISBN13__c.field-meta.xml
<CustomField>
    <fullName>ISBN13__c</fullName>
    <label>ISBN13</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>