force-app/main/default/objects/Books__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <label>ISBN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>