force-app/main/default/objects/Books__c/fields/Re__c.field-meta.xml
<CustomField>
    <fullName>Re__c</fullName>
    <label>PicklistValues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>