force-app/main/default/objects/Books__c/fields/Year_Published__c.field-meta.xml
<CustomField>
    <fullName>Year_Published__c</fullName>
    <label>Year Published</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>