force-app/main/default/objects/Books__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Goodreads_Id__c</columns>
    <columns>Author__c</columns>
    <columns>Publisher__c</columns>
    <columns>Average_Rating__c</columns>
    <columns>ISBN__c</columns>
    <columns>ISBN13__c</columns>
    <columns>image_url__c</columns>
    <columns>Year_Published__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>